<resources>
    <string name="app_name">Starling</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_library">Library</string>
    <string name="permission_rationale">To look up your photos and videos, this application requires permission to access the storage of this device</string>
    <string name="permission_rationale_settings">To look up your photos and videos, this application requires permission to access the storage of this device. You can enable this via "Settings" > "Permissions" > "Files and media"</string>
    <string name="permission_button">Grant permission</string>
    <string name="permission_button_settings">Settings</string>
    <string name="video_play">Play</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="date_today">Today</string>
    <string name="media_delete">Delete</string>
    <string name="video_delete_title">Delete Video</string>
    <string name="video_delete_message">Are you sure you want to delete this video?</string>
    <string name="image_delete_title">Delete Image</string>
    <string name="image_delete_message">Are you sure you want to delete this image?</string>
    <string name="media_share">Share</string>
    <string name="media_share_error">Sharing is currently not available</string>
    <string name="media_crop">Crop</string>
    <string name="edit_btn_save_copy">Save</string>
    <string name="edit_btn_cancel">@android:string/cancel</string>
    <string name="edit_btn_reset">reset</string>
    <string name="edit_cancel_warning_content">Are you sure you want to discard any unsaved changes?</string>
    <string name="edit_cancel_warning_title">Unsaved changes</string>
    <string name="edit_cancel_warning_btn_cancel">keep editing</string>
    <string name="edit_cancel_warning_btn_continue">discard</string>
    <string name="edit_draw_brush_style">Brush style</string>
    <string name="edit_draw_text_style">Text style</string>
    <string name="draw_text_add">Enter text to draw on the image</string>
    <!--    Aspect ratio string-->
    <string name="edit_crop_ar_free">Free</string>
    <string name="edit_crop_ar_square">Square</string>
    <string name="edit_crop_ar_original">Original</string>
    <string name="edit_crop_ar_4_3">4:3</string>
    <string name="edit_crop_ar_16_9">16:9</string>
    <string name="edit_crop_ar_21_9">21:9</string>
    <string name="edit_crop_ar_5_4">5:4</string>
    <!--    Save strings -->
    <string name="edit_type_save">Save</string>
    <string name="edit_save_copy">Save as copy</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
