<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/buttonGroup"
        android:orientation="vertical"
        app:singleSelection="true"
        app:checkedButton="@id/ratio_free"
        app:selectionRequired="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ratio_free"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/edit_crop_ar_free"
            android:textAlignment="textStart"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ratio_square"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/edit_crop_ar_square"
            android:textAlignment="textStart"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ratio_original"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/edit_crop_ar_original"
            android:textAlignment="textStart"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ratio_four_to_three"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/edit_crop_ar_4_3"
            android:textAlignment="textStart"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ratio_sixteen_to_nine"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/edit_crop_ar_16_9"
            android:textAlignment="textStart"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ratio_twenty_one_to_nine"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/edit_crop_ar_21_9"
            android:textAlignment="textStart"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ratio_five_to_four"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/edit_crop_ar_5_4"
            android:textAlignment="textStart"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
