<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="128dp">

    <com.google.android.material.divider.MaterialDivider
        android:layout_marginBottom="8dp"
        android:id="@+id/mode_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/overlay_mode_selector" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/overlay_mode_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleLine="true"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:chipSpacingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_cancel">

        <com.google.android.material.chip.Chip
            android:id="@+id/overlay_mode_crop"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:checked="true"
            android:text="@string/media_crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.chip.Chip
            android:id="@+id/overlay_mode_draw"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="Markup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/button_save"
        android:text="@string/edit_btn_save_copy" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/edit_btn_cancel"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/button_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>
