<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.leondeklerk.starling.library.LibraryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp"
        tools:context=".library.LibraryFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                app:title="@string/title_gallery"
                app:titleTextColor="?attr/colorOnPrimarySurface"
                android:backgroundTint="?attr/colorSurface"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/library_grid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:itemCount="50"
            tools:listitem="@layout/gallery_image_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bar_layout"
            tools:spanCount="5"
            tools:layoutManager="GridLayoutManager" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".2" />

        <LinearLayout
            android:id="@+id/permission_rationale_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/top_guideline"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/locked"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_baseline_image_search_24" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/permission_rationale_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginEnd="72dp"
                android:gravity="center"
                android:paddingTop="16dp"
                android:text="@{context.getString(viewModel.permissionTextId)}"
                tools:text="@string/permission_rationale" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/permission_rationale_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{context.getString(viewModel.permissionButtonTextId)}"
                tools:text="@string/permission_button" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
