<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <com.leondeklerk.starling.edit.InteractiveImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:srcCompat="@tools:sample/avatars"
        android:id="@+id/interactiveImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toTopOf="@+id/mode_divider" />

    <com.leondeklerk.starling.edit.CropView
        android:id="@+id/cropper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mode_divider" />

    <com.leondeklerk.starling.edit.DrawView
        android:visibility="invisible"
        tools:visibility="invisible"
        android:id="@+id/draw_overlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/mode_divider" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_marginBottom="8dp"
        android:id="@+id/mode_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/mode_selector" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/mode_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleLine="true"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:chipSpacingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_cancel">

        <com.google.android.material.chip.Chip
            android:id="@+id/mode_crop"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:checked="true"
            android:text="@string/media_crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.chip.Chip
            android:id="@+id/mode_draw"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="Markup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/button_save"
        android:text="@string/edit_btn_save_copy" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/edit_btn_cancel"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/button_cancel" />

    <View
        android:id="@+id/saving_overlay"
        android:visibility="gone"
        android:elevation="2dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/status_bar_scrim" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:elevation="2dp"
        android:visibility="gone"
        android:id="@+id/saving_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
